--- a/.github/workflows/signin.yml
+++ b/.github/workflows/signin.yml
@@ -1,9 +1,9 @@
 name: Aliyun Signin
 
 on:
-  schedule:
+  #schedule:
    # 每天国际时间 14:40 运行一次, 中国时间 22:40
-    - cron: '27 22 * * *'
+   # - cron: '27 22 * * *'
   workflow_dispatch:
 jobs:
   signin:
